fix horizontal scrollbar showing up on windows

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,6 +19,7 @@ body {
   font-size: 18px;
   font-weight: 300;
   z-index: 1;
+  overflow-x: hidden;
 }
 
 .wrapper > * {
